--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "framer-motion": "^11.13.1",
     "idb": "^8.0.2",
     "input-otp": "^1.2.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "nanoid": "^5.0.9",
